--- a/assets/css/apply.css
+++ b/assets/css/apply.css
@@ -4,3 +4,257 @@
     padding:0;
     box-sizing: border-box;
 }
+.primary-nav-bar{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+}
+.primary-nav-bar .nav-links{
+    padding:0 10px;
+    display: flex;
+}
+.nav-links li{
+    list-style-type: none;
+    margin: 0 20px;
+    position: relative;
+}
+.active::after{
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    right: 0px;
+    height: 4px;
+    width: 100%;
+    background-color: green;
+}
+.nav-links li a{
+    text-decoration: none;
+    font-family: monospace;
+    font-size: 18px;
+    color: rgba(3, 5, 100, 0.918);
+    font-weight: 600;
+}
+#opn-btn{
+    width: 100px;
+    height: 20px;
+    display: none;
+}
+#x-btn{
+    width: 100px;
+    height: 20px;
+    display: none;
+}
+.logo h3{
+    font-family: 'Roboto Condensed';
+    padding:10px 2px;
+    color: rgb(2, 2, 100);
+    font-size: 20px;
+}
+.logo img{
+    height: 50px;
+    padding: 2px;
+    width: 50px;
+}
+.logo{
+    display: flex;
+    padding:0 10px;
+}
+.logo span{
+    color: rgb(217, 157, 6);
+}
+#login-btn a{
+    border-radius: 20px;
+    color: rgb(2, 2, 100);
+    padding: 3px 6px;
+    border: 2px solid rgb(2, 2, 100);
+} 
+#join-btn a{
+    border-radius: 20px;
+    color: #fff;
+    padding: 3px 12px;
+    background: rgb(2, 2, 100);
+}
+ 
+
+.main-apply{
+    display: flex;
+    padding: 20px;
+    background-image:linear-gradient(0deg, rgba(1, 5, 45, 0.838), rgba(20, 3, 63, 0.837)), url('../images/pexels-yan-krukau-8199602.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+.div-four{
+    border: 1px solid rgba(128, 128, 128, 0.829);
+    padding: 13px;
+    height: 70vh;
+    width: 100%;
+}
+select{
+    height: 35px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+.apply-text{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
+}
+.apply-text h1{
+    font-size: 45px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(217, 157, 6);
+    margin-top: 10px;
+
+} 
+.apply-text h2{
+    margin-top: 10px;
+    color: #fff;
+    font-size: 24px;
+
+}
+.apply-text h4{
+    color: #fff;
+    font-weight: 200;
+    margin-top: 10px;
+    font-size: 19px;
+}
+input{
+    margin: 5px 0;
+    padding: 0 10px;
+    width: 100%;
+    height: 35px;
+    outline-color: rgb(2, 2, 100);
+}
+
+.div-four input[type=button]{
+    background-color:  rgb(2, 2, 100);
+    color: white;
+    border: none;
+    width: 100%;
+    padding: 1em;
+    font-family: 'Roboto Condensed';
+}
+
+input::placeholder{
+    font-size: 15px;
+    color: rgb(2, 2, 63);
+}
+.container-four{
+    text-align: center;
+    font-family: 'Roboto Condensed';
+    font-size: 14px;
+    padding: 1.5em;
+}
+@media only screen and (max-width:600px){
+    .primary-nav-bar .nav-links{
+        display: block;
+    }
+    .nav-links{
+        background-color: rgb(2, 2, 63);
+        transition: 1.2s;
+        position: fixed;
+        top: 0;
+        width: 200px;
+        text-align: center;
+        right: -200px;
+        padding: 2.7em 1em;
+        height: 350px;
+        overflow: auto;
+        z-index: 2;
+    }
+    .nav-links li a{
+        margin: 20px 0;
+        display: block;
+        text-align: center;
+        color: #fff;
+        background-color:transparent;
+    }
+    #login-btn a{
+        border-radius: 20px;
+        color: #fff;
+        padding: 3px 6px;
+        border: 2px solid rgb(2, 2, 100);
+    } 
+    #opn-btn{
+        width: 50px;
+        height: 20px;
+        background-color:transparent;
+        display: block;
+        border: none;
+        margin:5px 0;
+        position: absolute;
+        right: 0;    
+    }
+    #x-btn img{
+        height: 25px;
+        width: 30px;
+        border-radius: 50%;
+        background-color:transparent;
+    }
+    #opn-btn img{
+        z-index: 1;
+        height: 30px;
+        width: 30px;
+    }
+    #x-btn{
+        width: 50px;
+        height: 20px;
+        display: block;
+        position: absolute;
+        border: none;
+        right: 10px;
+        background-color:transparent;
+    }
+    .div-four{
+        border: 1px solid rgba(128, 128, 128, 0.829);
+        margin: 0 10px 0 0;
+        width: 10%;
+    }
+.main-apply{
+    display: block;
+    height: 110vh;
+    width: 100%;
+}
+.apply-text{
+    text-align: center;
+    width:90%;
+    margin-bottom: 20px;
+}
+.apply-text h1{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(217, 157, 6);
+    margin-top: 10px;
+} 
+.apply-text h2{
+    margin-top: 10px;
+    color: #fff;
+    font-size: 18px;
+}
+.div-four{
+    width: 80%;
+    height: 300px;
+    margin: 0 auto;
+}
+select{
+    width: 100%;
+
+}
+input{
+    height: 30px;
+    width: 100%;
+    margin: 5px auto;
+}
+.apply-text h4{
+    color: #fff;
+    font-weight: 200;
+    margin-top: 10px;
+    font-size: 17px;
+}
+.active::after{
+    display: none;
+  }
+}
+      
