--- a/assets/css/tour.css
+++ b/assets/css/tour.css
@@ -69,7 +69,7 @@
     padding: 10px 0;
     margin-right: auto;
     width: 100%;    
-    background-image:linear-gradient(0deg, rgba(1, 5, 45, 0.838), rgba(20, 3, 63, 0.837)), url('../images/pexels-yan-krukau-8199602.jpg');
+    background-image:linear-gradient(0deg, rgba(1, 5, 45, 0.838), rgba(20, 3, 63, 0.837)), url('../images/kingster.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -194,7 +194,7 @@
     .tour h2{
         margin: 10px 0;
         font-family: 'Montserrat';
-        color: #530DC8;
+        color: #fff;
         font-weight: 900;
         text-transform: capitalize;
         font-size: 20px;
